# BakalariAPI

./: BakalariAPI.py  CHANGELOG.md  Exceptions.py  LICENSE  Poznámky.md  README.md  Shell.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  shell.py
Dokumentace/: README.md  readme.md
Dokumentace/BakalariAPI/: README.md  internal.md  serializace.md
Dokumentace/BakaláriAPI/: README.md  bakalariapi.md  internal.md
Dokumentace/Bakaláři/: readme.md
Dokumentace/Bakaláři/Endpointy/: README.md  dashboard.md  file.md  grades.md  homeworks.md  homeworks_done.md  komens.md  komens_confirm.md  komens_get.md  login.md  logout.md  meetings_info.md  meetings_overview.md  readme.md  rozvrh.md  session_extend.md  session_info.md
bakalari/: __init__.py  bakalari.py  bakalariobjects.py  exceptions.py  utils.py
bakalari/modules/: __init__.py  grades.py  homeworks.py  komens.py  meetings.py  utils.py
bakalariapi/: __init__.py  bakalari.py  bakalariobjects.py  looting.py  utils.py
bakalariapi/modules/: grades.py  homeworks.py  komens.py  meetings.py
src/bakalariapi/: __init__.py  bakalari.py  exceptions.py  looting.py  objects.py  seleniumhandler.py  serialization.py  sessions.py  utils.py
src/bakalariapi/modules/: grades.py  homeworks.py  komens.py  meetings.py
src/bakalarishell/: __init__.py  __main__.py  main.py  shell.py
