[metadata]
name = BakalariAPI
version = 3.1.0-dev
author = Hackrrr
description = Rádoby API pro Bakaláře
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Hackrrr/BakalariAPI/

[options]
packages =
#    bakalariapi
#    bakalarishell
    find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    bs4
    platformdirs
    prompt-toolkit
    requests
    rich
    selenium
    typing-extensions
[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    bakalarishell = bakalarishell:main