[metadata]
name = BakalariAPI
version = 4.0.0-dev
author = Hackrrr
description = Rádoby API pro Bakaláře
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Hackrrr/BakalariAPI/
license = MIT
license_files =
    = LICENSE*

[options]
packages =
#    bakalariapi
#    bakalarishell
    find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    bs4
    platformdirs
    prompt-toolkit>=3.0.9 # ProgressBarCounter
    requests
    rich
    selenium
    typing-extensions>=3.10 # TypeGuard
[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    bakalarishell = bakalarishell:main